Add Gina's last name to shownotes

--- a/_posts/2023-04-05-s01e03.md
+++ b/_posts/2023-04-05-s01e03.md
@@ -21,7 +21,7 @@ In this episode we're talking with our guest hosts Gina and Carol about women in
 
 Carol Chen (<a href="https://mastodon.org.uk/@cybette">cybette</a>) is a Community Architect at Red Hat, having worked with several upstream communities such as ManageIQ, Koku, and currently Ansible. She has been actively involved in open source communities while working for Jolla and Nokia previously. In addition, she also has experience in software development/integration in her 12 years in the mobile industry. On a personal note, Carol plays the Timpani in an orchestra in Tampere, Finland, where she now calls home.
 
-Gina (<a href="https://foosel.net">https://foosel.net</a>) is a passionate code monkey, gamer, hobby baker, and creator and maintainer of OctoPrint. She has always been in love with code, and loves tinkering and helping others. Gina has written open source software for most of her adult life and has been in the lucky position to do it full time - and 100% crowdfunded by the community - for her project OctoPrint for several years now.
+Gina Häußge (<a href="https://foosel.net">https://foosel.net</a>) is a passionate code monkey, gamer, hobby baker, and creator and maintainer of OctoPrint. She has always been in love with code, and loves tinkering and helping others. Gina has written open source software for most of her adult life and has been in the lucky position to do it full time - and 100% crowdfunded by the community - for her project OctoPrint for several years now.
 
 <h2>Links</h2>
 <ul>
